Resolved 1. Swipe Issue 2. Logo Alignment Issue 3. Cross Button Issue

--- a/src/components/elements/HeaderBar/HeaderBar.css
+++ b/src/components/elements/HeaderBar/HeaderBar.css
@@ -68,6 +68,7 @@
   flex-direction: row;
   height: 36px;
   padding-right: 16px;
+  align-items: center;
 }
 
 .header-bar-menu-icon {
